# botColoringCreator

./: .env.example  Dockerfile  README.md  check.py  config.py  docker-compose.yml  main.py  pyproject.toml
ai/: __init__.py  image_handler.py
kafka_settings/: consumer.py  producer.py
keyboards/: __init__.py  inlineKeyboard.py  replyKeyboard.py
routers/: __init__.py  ai_commands.py  base_commands.py
shared/: utils.py
