[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.20.0.post0"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
numpy = "^2.2.5"
deep-translator = "^1.11.4"
diffusers = "^0.33.1"
torch = "^2.7.0"
opencv-python = "^4.11.0.86"
transformers = "^4.51.3"
accelerate = "^1.6.0"
redis = "^6.0.0"
